fix: improvement design in modulos with cards about, shift management, branches and laboratory orders

--- a/frontend-oftalmologia/src/app/features/laboratoy-orders/components/filters/filter-laboratory-orders.component.scss
+++ b/frontend-oftalmologia/src/app/features/laboratoy-orders/components/filters/filter-laboratory-orders.component.scss
@@ -1,23 +1,1 @@
-.filter-form {
-  .btn-primary {
-    background-color: #67baf1;
-    border-color: #67baf1;
 
-    &:hover {
-      background-color: #4aa7de;
-      border-color: #4aa7de;
-    }
-
-    &:focus {
-      background-color: #4aa7de;
-      border-color: #4aa7de;
-      box-shadow: 0 0 0 0.2rem rgba(103, 186, 241, 0.25);
-    }
-  }
-
-  .form-control:focus,
-  .form-select:focus {
-    border-color: #67baf1;
-    box-shadow: 0 0 0 0.2rem rgba(103, 186, 241, 0.25);
-  }
-}
